--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
                     <nav class="menu">
                         <a class="link" href="#">Home</a>
                         <a class="link" href="#">Service</a>
-                        <a class="link" href="#">News</a>
+                        <a class="link" href="news.html">News</a>
                         <a class="link" href="#">Contact</a>
                     </nav>
                     <a class="btn-theme" href="">Login <i class="fa-regular fa-arrow-up-right"></i></a>
@@ -354,18 +354,30 @@
                 <div class="small-title">Business</div>
                 <div class="title">How To Use Digitalization<br>In The Classroom</div>
                 <div class="text">Lorem, ipsum dolor sit amet consectetur.</div>
+                <div class="date">
+                    <div class="day">25</div>
+                    <div class="mon">Mar</div>
+                </div>
             </div>
             <div class="info">
                 <img src="/images/chatgpt.svg" alt="">
                 <div class="small-title">Business</div>
                 <div class="title">How To Implement Chat GPT<br>In Your Projects</div>
                 <div class="text">Lorem, ipsum dolor sit amet consectetur.</div>
+                <div class="date">
+                    <div class="day">25</div>
+                    <div class="mon">Mar</div>
+                </div>
             </div>
             <div class="info">
                 <img src="/images/moderncss.svg" alt="">
                 <div class="small-title">Business</div>
                 <div class="title">The Guide To Support<br>Modern CSS Design</div>
                 <div class="text">Lorem, ipsum dolor sit amet consectetur.</div>
+                <div class="date">
+                    <div class="day">25</div>
+                    <div class="mon">Mar</div>
+                </div>
             </div>
     </div>
     <ul class="pagination">
