--- a/news.html
+++ b/news.html
@@ -158,6 +158,16 @@
         </div>
     </section>
 
+    <section class="signup">
+        <div class="container">
+            <div class="text">Get News Update By Signup</div>
+            <form>
+                <input type="text" placeholder="username@domain.com" maxlength="64">
+                <a class="btn-theme" href="">Subscribe <i class="fa-regular fa-arrow-up-right"></i></a>
+            </form>
+        </div>
+    </section>
+
     <section class="footer">
         <div class="container">
              <div class="info">
