--- a/news.html
+++ b/news.html
@@ -56,7 +56,7 @@
             <div class="title">Our News & Articles</div>
             <div class="content">
                 <div class="info">
-                    <img src="/images/classroom.svg" alt="">
+                    <a href="details.html"><img src="/images/classroom.svg" alt=""></a>
                     <div class="small-title">Business</div>
                     <div class="title">How To Use Digitalization<br>In The Classroom</div>
                     <div class="text">Lorem, ipsum dolor sit amet consectetur.</div>
@@ -75,6 +75,7 @@
                         <div class="mon">Mar</div>
                     </div>
                 </div>
+                
                 <div class="info">
                     <img src="/images/moderncss.svg" alt="">
                     <div class="small-title">Business</div>
