--- a/home.html
+++ b/home.html
@@ -30,10 +30,10 @@
             </div>
                 <div class="second-row">
                     <nav class="menu">
-                        <a class="link" href="#">Home</a>
+                        <a class="link" href="home.html">Home</a>
                         <a class="link" href="#">Service</a>
                         <a class="link" href="news.html">News</a>
-                        <a class="link" href="#">Contact</a>
+                        <a class="link" href="contact.html">Contact</a>
                     </nav>
                     <a class="btn-theme" href="">Login <i class="fa-regular fa-arrow-up-right"></i></a>
                 </div>
