--- a/contact.html
+++ b/contact.html
@@ -54,10 +54,49 @@
     <section class="contact-data">
         <div class="container">
             <div class="box">
+                <div class="icon"><i class="fa-light fa-location-dot"></i> </div>
+                <div class="info">
+                    <div class="text">Visit us</div>
+                    <div class="data">Sveavägen 31<br>111 34 STOCKHOLM</div>
+                </div>
             </div>
-            <div class="box"></div>
-            <div class="box"></div>
+            <div class="box">
+                <div class="icon"><i class="fa-light fa-phone-volume"></i></div>
+                <div class="info">
+                    <div class="text">Callt us</div>
+                    <div class="data">+46 (8) 121 470 50<br>+46 (8) 121 470 50</div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="icon"><i class="fa-light fa-envelope"></i></div>
+                <div class="info">
+                    <div class="text">Email us</div>
+                    <div class="data">info@crito.com<br>info@crito.com</div>
+                </div>
+            </div>
         </div>
+    </section>
+
+    <section class="contact-form">
+        <div class="container">
+            <div class="title">Leave us a message <br>for any information.</div>
+            <form novalidate>
+                <div class="name form-group">
+                    <label for="name"></label>
+                    <input id="name" type="text" class="invalid" placeholder="Name" required>
+                </div>
+                <div class="email form-group">
+                    <label for="email"></label>
+                    <input id="email" type="text" class="invalid" placeholder="Email">
+                </div>
+                <div class="message form-group">
+                    <label for="message"></label>
+                    <textarea id="message" class="invalid" placeholder="Your Message"></textarea>
+                </div>
+                <button type="submit" class="btn-theme">Send Message <i class="fa-regular fa-arrow-up-right"></i></button>
+            </form>        
+        </div>
+
     </section>
 
 
