--- a/details.html
+++ b/details.html
@@ -51,6 +51,41 @@
         </div>
     </section>
 
+    <section class="article">
+        <div class="container">
+            <div class="title">How To Use Digitalization<br>In The Classroom</div>
+            <div class="label">
+                <div class="text">Mar 25, 2023</div>
+                <li></li>
+                <div class="text">Business</div>
+                <li></li>
+                <div class="text">Kimbery Hansen</div>
+            </div>
+            <div class="content">
+                <div class="left">
+                    <img src="/images/detailsimage.svg" alt="">
+                    <div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>    
+                </div>
+                <div class="right">
+                    <form>
+                    <div class="search-input">
+                        <i class="fa-regular fa-magnifying-glass"></i>
+                        <input type="text" placeholder="Sök" maxlength="64">                      
+                    </div>
+                </form>
+                <div class="box">
+                    <div class="title">Recent Posts</div>
+                    <div class="text">
+                        <div class="bold">Lorem Ipsum is simply dummy text of the printing and</div>
+                        <div class="light">Jan 14,2020</div>
+                    </div>
+
+                </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 
 
