--- a/home.html
+++ b/home.html
@@ -438,7 +438,7 @@
              </div>
     </div>
 </section>
-<section class="bottom">
+<section class="footer-bottom">
     <div class="container">
         <div class="copyright">
             &copy; 2023 Crito - Consulting Company Inc. All Rights Reserved.
