--- a/details.html
+++ b/details.html
@@ -74,10 +74,29 @@
                     </div>
                 </form>
                 <div class="box">
-                    <div class="title">Recent Posts</div>
+                    <div class="title" data-text="Rec">ent Posts</div>
                     <div class="text">
                         <div class="bold">Lorem Ipsum is simply dummy text of the printing and</div>
                         <div class="light">Jan 14,2020</div>
+                    </div>
+                    <div class="text">
+                        <div class="bold">Lorem Ipsum is simply dummy text of the printing and</div>
+                        <div class="light">Jan 14,2020</div>
+                    </div>
+                    <div class="text">
+                        <div class="bold">Lorem Ipsum is simply dummy text of the printing and</div>
+                        <div class="light">Jan 14,2020</div>
+                    </div>
+                    <div class="text">
+                        <div class="bold">Lorem Ipsum is simply dummy text of the printing and</div>
+                        <div class="light">Jan 14,2020</div>
+                    </div>
+                </div>
+                <div class="category-box">
+                    <div class="title" data-text="Cat">egory</div>
+                    <div class="text">
+                        <div class="bold">Lorem Ipsum  </div>
+                        <div class="light">10n post</div>
                     </div>
 
                 </div>
