--- a/details.html
+++ b/details.html
@@ -64,7 +64,21 @@
             <div class="content">
                 <div class="left">
                     <img src="/images/detailsimage.svg" alt="">
-                    <div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>    
+                    <div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
+                    <div class="text-bold">
+                        <div class="icon"><i class="fa-solid fa-quote-left"></i></div>
+                        <div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </div>
+                    </div>  
+                    <div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
+                    <div class="tags">
+                        <a class="tag" href="#">tag</a>
+                        <a class="tag" href="#">tag</a>
+                        <a class="tag" href="#">tag</a>
+                        <a class="tag" href="#">tag</a>
+                        <a class="tag" href="#">tag</a>
+                        <a class="tag" href="#">tag</a>
+
+                    </div>  
                 </div>
                 <div class="right">
                     <form>
@@ -105,7 +119,58 @@
         </div>
     </section>
 
-
+    <section class="news-details">
+        <div class="container">
+            <div class="top-content">
+                <div class="text">
+                    <div class="red">Article & News</div>
+                    <div class="title">Experience Team Members</div>
+                </div>
+                <div class="btn-container">
+                    <a class="btn-theme-white" href="">Browse Articles <i class="fa-regular fa-arrow-up-right"></i></a>
+                </div>
+            </div>
+            <div class="content-image">
+                <div class="info">
+                    <img src="/images/classroom.svg" alt="">
+                    <div class="small-title">Business</div>
+                    <div class="title">How To Use Digitalization<br>In The Classroom</div>
+                    <div class="text">Lorem, ipsum dolor sit amet consectetur.</div>
+                    <div class="date">
+                        <div class="day">25</div>
+                        <div class="mon">Mar</div>
+                    </div>
+                </div>
+                <div class="info">
+                    <img src="/images/chatgpt.svg" alt="">
+                    <div class="small-title">Business</div>
+                    <div class="title">How To Implement Chat GPT<br>In Your Projects</div>
+                    <div class="text">Lorem, ipsum dolor sit amet consectetur.</div>
+                    <div class="date">
+                        <div class="day">25</div>
+                        <div class="mon">Mar</div>
+                    </div>
+                </div>
+                <div class="info">
+                    <img src="/images/moderncss.svg" alt="">
+                    <div class="small-title">Business</div>
+                    <div class="title">The Guide To Support<br>Modern CSS Design</div>
+                    <div class="text">Lorem, ipsum dolor sit amet consectetur.</div>
+                    <div class="date">
+                        <div class="day">25</div>
+                        <div class="mon">Mar</div>
+                    </div>
+                </div>
+        </div>
+        <ul class="pagination">
+            <li class="active"></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+        </div>
+    </section>
 
 
     <section class="footer">
