--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
                         <a class="link" href="news.html">News</a>
                         <a class="link" href="contact.html">Contact</a>
                     </nav>
-                    <a class="btn-theme" href="">Login <i class="fa-regular fa-arrow-up-right"></i></a>
+                    <div class="button"><a class="btn-theme" href="">Login <i class="fa-regular fa-arrow-up-right"></i></a></div>
                 </div>
             </div>     
         </div>
@@ -43,11 +43,11 @@
     <section class="showcase">
             <div class="container">
                 <div class="showcase-content">
-                    <div class="showcase-title">We Provide The Best Business Solutions</div>
+                    <div class="showcase-title">We Provide The <br> Best Business Solutions</div>
                     <div class="showcase-text">Establish your vision and value proposition and turn them into testable prototypes.</div>
                     <a class="btn-theme" href="">Get Consulting<i class="fa-regular fa-arrow-up-right"></i></a>
-                    <a class="btn-theme" href="">Learn More <i class="fa-regular fa-arrow-up-right"></i></a>
-                </div>             
+                    <a class="btn-theme-beige" href="">Learn More <i class="fa-regular fa-arrow-up-right"></i></a>
+                </div>
                 <img src="/images/showcase-home.svg" alt="">
             </div>
     </section>
@@ -66,7 +66,7 @@
             <div class="left-content">
                 <div class="title">Features</div>
                 <div class="text">Our Accounting is <br> trusted by thousand <br> of companies</div>
-                <div class="button"></div>
+                <div class="button"> <a class="btn-theme" href="">Learn More <i class="fa-regular fa-arrow-up-right"></i></a></div>
             </div>
             <div class="right-content">
                 
@@ -398,6 +398,7 @@
             <a class="btn-theme" href="">Subscribe <i class="fa-regular fa-arrow-up-right"></i></a>
         </form>
     </div>
+    <img src="/images/signup-element.svg" alt="">
 </section>
 
 <section class="footer">
