--- a/home.html
+++ b/home.html
@@ -40,6 +40,7 @@
             </div>     
         </div>
     </header>
+
     <section class="showcase">
             <div class="container">
                 <div class="showcase-content">
@@ -50,7 +51,9 @@
                 </div>
                 <img src="/images/showcase-home.svg" alt="">
             </div>
+            <div class="lines"><img src="/images/lines.svg" alt=""></div>
     </section>
+
     <section class="logos">
         <div class="container">
             <img src="/images" alt="">
@@ -129,25 +132,26 @@
                 <div class="box">
                     <div class="title">Business Advice</div>
                     <div class="info">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis in nam possimus.</div>
-                    <div class="more-info"><i class="fa-solid fa-arrow-right" style="color: #ffffff;"></i></div>
+                    <div class="more-info"><i class="fa-solid fa-arrow-right"></i></div>
                 </div>
                 <div class="box">
                     <div class="title">Startup Business</div>
                     <div class="info">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis in nam possimus.</div>
-                    <div class="more-info"><i class="fa-solid fa-arrow-right" style="color: #ffffff;"></i></div>
+                    <div class="more-info"><i class="fa-solid fa-arrow-right"></i></div>
                 </div>
                 <div class="box">
                     <div class="title">Financial Advice</div>
                     <div class="info">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis in nam possimus.</div>
-                    <div class="more-info"><i class="fa-solid fa-arrow-right" style="color: #ffffff;"></i></div>
+                    <div class="more-info"><i class="fa-solid fa-arrow-right"></i></div>
                 </div>
                 <div class="box">
                     <div class="title">Risk Management</div>
                     <div class="info">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis in nam possimus.</div>
-                    <div class="more-info"><i class="fa-solid fa-arrow-right" style="color: #ffffff;"></i></div>
+                    <div class="more-info"><i class="fa-solid fa-arrow-right"></i></div>
                 </div>
         </div>
-        <a class="btn-theme-beige" href="">Browse Services <i class="fa-regular fa-arrow-up-right"></i></a>
+        <div class="button"><a class="btn-theme-white" href="">Read more <i class="fa-regular fa-arrow-up-right"></i></a></div>
+        <div class="lines"><img src="/images/lines-right.svg" alt=""></div>
 </section>
 
 <section class="choose">
@@ -201,22 +205,22 @@
             <div class="image-content">
                 <img src="/images/business.svg" alt="">
                 <div class="title">Grow your business</div>
-                <div class="read-more">Read More <i class="fa-regular fa-arrow-up-right"></i></a></div>
+                <div class="read-more"><a class="btn-theme-white" href="">Read More <i class="fa-regular fa-arrow-up-right"></i></a></div>
             </div>
             <div class="image-content">
                 <img src="/images/responisive.svg" alt="">
                 <div class="title">Why your client needs a responsive website</div>
-                <div class="read-more">Read More <i class="fa-regular fa-arrow-up-right"></i></a></div>
+                <div class="read-more"><a class="btn-theme-white" href="">Read More <i class="fa-regular fa-arrow-up-right"></i></a></div>
             </div>
             <div class="image-content">
                 <img src="/images/employees.svg" alt="">
                 <div class="title">Educate your employees to get better results</div>
-                <div class="read-more">Read More <i class="fa-regular fa-arrow-up-right"></i></a></div>
+                <div class="read-more"><a class="btn-theme-white" href="">Read More <i class="fa-regular fa-arrow-up-right"></i></a></div>
             </div>
             <div class="image-content">
                 <img src="/images/important.svg" alt="">
                 <div class="title">Business Insights is a important piece of your business</div>
-                <div class="read-more">Read More <i class="fa-regular fa-arrow-up-right"></i></a></div>
+                <div class="read-more"><a class="btn-theme-white" href="">Read More <i class="fa-regular fa-arrow-up-right"></i></a></div>
             </div>
         </div>
         <a class="btn-theme-dark" href="">All Recent Projects <i class="fa-regular fa-arrow-up-right"></i></a>     
