--- a/news.html
+++ b/news.html
@@ -33,9 +33,9 @@
                         <a class="link" href="home.html">Home</a>
                         <a class="link" href="#">Service</a>
                         <a class="link" href="#">News</a>
-                        <a class="link" href="#">Contact</a>
+                        <a class="link" href="contact.html">Contact</a>
                     </nav>
-                    <a class="btn-theme" href="">Login <i class="fa-regular fa-arrow-up-right"></i></a>
+                    <div class="button"><a class="btn-theme" href="">Login <i class="fa-regular fa-arrow-up-right"></i></a></div>
                 </div>
             </div>     
         </div>
@@ -49,6 +49,7 @@
             </div>
             <div class="title">News & Articles</div>
         </div>
+        <div class="lines"><img src="/images/lines.svg" alt=""></div>
     </section>
 
     <section class="news-articles">
